--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 ---
 layout: workshop
 root: .
-venue: Euphoric State University
-address: 123 College Street, Euphoria
+venue: University of Washington
+address: Seattle, WA
 country: United-States
-humandate: Feb 17-18, 2020
+humandate: Jan 15-16, 2015
 humantime: 9:00 am - 4:30 pm
-startdate: 2020-06-17
-enddate: 2020-06-18
-latlng: 41.7901128,-87.6007318
-registration: restricted
-instructor: ["Grace Hopper", "Alan Turing"]
-helper: ["John von Neumann"]
+startdate: 2015-01-15
+enddate: 2015-01-16
+latlng: 
+registration: open
+instructor: [""]
+helper: [""]
 contact: admin@software-carpentry.org
 #redirect: http://www.3rd.party.workshop.home.page.com
 #eventbrite: 00000000000
