added instructor names, details about two sessions

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@ startdate: 2015-01-15
 enddate: 2015-01-16
 latlng: 
 registration: open
-instructor: [""]
+instructor: ["Russell Alleen-Willems", "Becca Blakewood", "Tyler Fox", "Emilia Gan", "Esther Le Grezause", "Maria Mckinley", "Ben Marwick", "Marina Oganyan", "Peter Schmiedeskamp", "Rachael Tatman"]
 helper: [""]
-contact: admin@software-carpentry.org
+contact: bmarwick@uw.edu
 #redirect: http://www.3rd.party.workshop.home.page.com
 #eventbrite: 00000000000
-lessons: ['R', 'Python', 'SQL', 'Git', 'Bash', 'VM']
+lessons: ['R', 'Python', 'SQL', 'Git', 'Bash']
 ---
 <!--
     Edit the values in the parameter block above to be appropriate for your workshop.
@@ -57,7 +57,10 @@ lessons: ['R', 'Python', 'SQL', 'Git', 'Bash', 'VM']
 -->
 <p>
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  The course is aimed at graduate students, staff, faculty and other 
+  researchers. No previous experience with programming is required. If
+  you do have experience in the topics in the syllabus and want to help,
+  send us an email.
 </p>
 
 <!--
@@ -79,9 +82,22 @@ lessons: ['R', 'Python', 'SQL', 'Git', 'Bash', 'VM']
 -->
 <p>
   <strong>Requirements:</strong>
-  Participants must bring a laptop with a few specific software packages installed
-  (listed below). They are also required to abide by Software Carpentry's
+  Participants must bring a laptop with a few specific software packages 
+  installed in advance (listed below). They are also required to abide by Software Carpentry's
   <a href="http://software-carpentry.org/conduct.html">Code of Conduct</a>.
+</p>
+
+<p>
+We find that workshops go a lot better if people come in groups, e.g., 
+4-5 people from one lab, half a dozen from another department or 
+institute, etc., so that they are less inhibited about asking 
+questions, and can support each other afterwards. So while individual 
+sign-ups are welcome, we encourage you to sign-up with a friend!
+</p>
+
+<p>
+No previous programming skills or experience is required. The lesson 
+contents and exercises are aimed at novices. 
 </p>
 
 <!--
@@ -106,6 +122,21 @@ lessons: ['R', 'Python', 'SQL', 'Git', 'Bash', 'VM']
 -->
 <h2>Schedule</h2>
 
+<p>
+  We are running two full concurrent sessions, one in each room. There 
+  are two key differences between the sessions. First is that one 
+  will teach programming with and the other will teach programming 
+  with R, all the other class content will be the same. As a general 
+  guide, Python is for you if you're working in the natural or physical 
+  sciences, and if you're in the social sciences and humanities then 
+  R might be more valuable. The second difference is that the instructors 
+  in the Python session come from the natural and physical sciences, 
+  while the instructors in the R session come from the social sciences 
+  and humanities. These is just a convenient way to offer the lessons, 
+  and of course you're welcome to join whichever session you think will 
+  benefit you the most. The choice is completely up to you.  
+</p>
+
 <div class="row-fluid">
   <div class="span6">
     <h3>Day 1</h3>
@@ -113,7 +144,7 @@ lessons: ['R', 'Python', 'SQL', 'Git', 'Bash', 'VM']
       <tr> <td>09:00</td> <td>Automating tasks with the Unix shell</td> </tr>
       <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> </tr>
       <tr> <td>12:00</td> <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td> <td>Building programs with Python</td> </tr>
+      <tr> <td>13:00</td> <td>Building programs with Python <em>or</em> R</td> </tr>
       <tr> <td><em>14:30</em></td> <td><em>Coffee break</em></td> </tr>
       <tr> <td>16:00</td> <td>Wrap-up</td> </tr>
     </table>
@@ -137,6 +168,21 @@ lessons: ['R', 'Python', 'SQL', 'Git', 'Bash', 'VM']
     Edit this block to show what topics will be covered.
 -->
 <h2>Syllabus</h2>
+
+<p>
+  We are running two full concurrent sessions, one in each room. There 
+  are two key differences between the sessions. First is that one 
+  will teach programming with and the other will teach programming 
+  with R, all the other class content will be the same. As a general 
+  guide, Python is for you if you're working in the natural or physical 
+  sciences, and if you're in the social sciences and humanities then 
+  R might be more valuable. The second difference is that the instructors 
+  in the Python session come from the natural and physical sciences, 
+  while the instructors in the R session come from the social sciences 
+  and humanities. These is just a convenient way to offer the lessons, 
+  and of course you're welcome to join whichever session you think will 
+  benefit you the most. The choice is completely up to you.  
+</p>
 
 <div class="row-fluid">
   <div class="span6">
