--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@ contents and exercises are aimed at novices.
   <div class="span6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td> <td><a href="novice/ref/01-shell.html">Automating tasks with the Unix shell</a></td> </tr>
+      <tr> <td>09:00</td> <td><a href="novice/shell/00-intro.html">Automating tasks with the Unix shell</a></td> </tr>
       <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> </tr>
       <tr> <td>12:00</td> <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td> <td>Building programs with <b><a href="novice/ref/03-python.html">Python</a></b> <em>or</em> <b><a href="novice/ref/06-R.html">R</a></b></td> </tr>
+      <tr> <td>13:00</td> <td>Building programs with <b><a href="novice/python/index.html">Python</a></b> <em>or</em> <b><a href="novice/r/index.html">R</a></b></td> </tr>
       <tr> <td><em>14:30</em></td> <td><em>Coffee break</em></td> </tr>
       <tr> <td>16:00</td> <td>Wrap-up</td> </tr>
     </table>
@@ -166,10 +166,10 @@ contents and exercises are aimed at novices.
   <div class="span6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td> <td><a href="novice/ref/02-git.html">Version control with Git</a></td> </tr>
+      <tr> <td>09:00</td> <td><a href="novice/git/index.html">Version control with Git</a></td> </tr>
       <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> </tr>
       <tr> <td>12:00</td> <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td> <td><a href="novice/ref/04-sql.html">Managing data with SQL</a></td> </tr>
+      <tr> <td>13:00</td> <td><a href="novice/sql/index.html">Managing data with SQL</a></td> </tr>
       <tr> <td><em>14:30</em></td> <td><em>Coffee break</em></td> </tr>
       <tr> <td>16:00</td> <td>Wrap-up</td> </tr>
     </table>
