Adding lat/long so we can put this workshop on the main SWC web site
Thanks, Greg

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ humandate: Jan 15-16, 2015
 humantime: 9:00 am - 4:30 pm
 startdate: 2015-01-15
 enddate: 2015-01-16
-latlng: 
+latlng: 47.655481,-122.305098
 registration: open
 instructor: ["Russell Alleen-Willems", "Becca Blakewood", "Tyler Fox", "Emilia Gan", "Esther Le Grezause", "Jens von der Linden", "Maria Mckinley", "Ben Marwick", "Marina Oganyan", "Peter Schmiedeskamp", "Rachael Tatman"]
 helper: [""]
