etherpad, email list

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@ lessons: ['R', 'Python', 'SQL', 'Git', 'Bash']
   staff and faculty.
 </p>
 
+<p>
+Please use this <a href="https://etherpad.mozilla.org/2015-01-15-uw">Etherpad</a> and the <a href="https://twitter.com/search?q=%23SWCUW">#SWCUW</a> hashtag on Twitter during class. We have a <a href="http://lists.software-carpentry.org/mailman/listinfo/seattle_lists.software-carpentry.org">UW Software Carpentry email list</a> that you can join to keep up with local plans, to get advice, ask questions, etc. after the workshop is over.
+</p>
+
 <!--
     Modify this block to reflect the target audience for your workshop.
     In particular, if it is only open to people from a particular institution,
