--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ startdate: 2015-01-15
 enddate: 2015-01-16
 latlng: 47.655481,-122.305098
 registration: open
-instructor: ["Russell Alleen-Willems", "Becca Blakewood", "Tyler Fox", "Tracy Fuentes", "Emilia Gan", "Esther Le Grezause", "Chungho Kim", "Jens von der Linden", "Maria Mckinley", "Ben Marwick", "Marina Oganyan", "Peter Schmiedeskamp", "Rachael Tatman", "Sam White"]
+instructor: ["Russell Alleen-Willems", "Becca Blakewood", "Tyler Fox", "Tracy Fuentes", "Emilia Gan", "Esther Le Grezause", "Chungho Kim", "Jens von der Linden", "Maria Mckinley", "Ben Marwick", "Jaclyn Saunders", "Peter Schmiedeskamp", "Rachael Tatman", "Sam White"]
 helper: ["Tania Melo", "Tiffany Timbers", "Earle Wilson"]
 contact: bmarwick@uw.edu
 #redirect: http://www.3rd.party.workshop.home.page.com
