add link to data files

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ contents and exercises are aimed at novices.
   <div class="span6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td> <td><a href="novice/shell/00-intro.html">Automating tasks with the Unix shell</a></td> </tr>
+      <tr> <td>09:00</td> <td><a href="novice/shell/index.html">Automating tasks with the Unix shell</a></td> </tr>
       <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> </tr>
       <tr> <td>12:00</td> <td>Lunch break</td> </tr>
       <tr> <td>13:00</td> <td>Building programs with <b><a href="novice/python/index.html">Python</a></b> <em>or</em> <b><a href="novice/r/index.html">R</a></b></td> </tr>
@@ -259,6 +259,7 @@ contents and exercises are aimed at novices.
   </div>
 </div>
 
+
 <hr/>
 
 <!--
@@ -280,6 +281,7 @@ contents and exercises are aimed at novices.
    If you haven't already, please register for a free account at GitHub.
    If you have an edu email, you can <a href="https://education.github.com/discount_requests/new">register for a free educational account</a> which has some features usually only found in paid accounts. We will use this service as part of the lesson on version control.
 <p>
+  The datasets used in the lessons can be downloaded from http://files.software-carpentry.org/
 </p>
 
 {% include setup.html %}
