add link to data files

--- a/index.html
+++ b/index.html
@@ -280,8 +280,9 @@ contents and exercises are aimed at novices.
 </p>
    If you haven't already, please register for a free account at GitHub.
    If you have an edu email, you can <a href="https://education.github.com/discount_requests/new">register for a free educational account</a> which has some features usually only found in paid accounts. We will use this service as part of the lesson on version control.
+</p>
 <p>
-  The datasets used in the lessons can be downloaded from http://files.software-carpentry.org/
+  The datasets used in the lessons can be downloaded from <a href="http://files.software-carpentry.org/">http://files.software-carpentry.org/</a>
 </p>
 
 {% include setup.html %}
