zip shell lesson data for easy downloading

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ contents and exercises are aimed at novices.
    If you have an edu email, you can <a href="https://education.github.com/discount_requests/new">register for a free educational account</a> which has some features usually only found in paid accounts. We will use this service as part of the lesson on version control.
 </p>
 <p>
-  The datasets used in the lessons can be downloaded from <a href="http://files.software-carpentry.org/">http://files.software-carpentry.org/</a>
+  The datasets used in the lessons can be downloaded from here: <a href="novice/shell/filesystem.zip">shell lesson data</a>, <a href="http://files.software-carpentry.org/">R, Python and SQL lesson data</a>
 </p>
 
 {% include setup.html %}
